--- a/pages/cosmeticos.html
+++ b/pages/cosmeticos.html
@@ -14,26 +14,26 @@
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
             
-                <img id="logo" class="header" src="/img/Logo.png" alt="logo" width="100px" > 
+                <img id="logo" class="header" src="/govi/img/Logo.png" alt="logo" width="100px" > 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/index.html">HOME</a>
+                    <a class="nav-link active" aria-current="page" href="/govi/index.html">HOME</a>
                   </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/pages/cosmeticos.html">COSMETICOS</a>
+                <a class="nav-link active" href="/govi/pages/cosmeticos.html">COSMETICOS</a>
               </li>                  
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/pages/tutoriales.html">TUTORIALES</a>
+                <a class="nav-link active" aria-current="page" href="/govi/pages/tutoriales.html">TUTORIALES</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/pages/maquillajes.html">MAQUILLAJE</a>
+                <a class="nav-link active" aria-current="page" href="/govi/pages/maquillajes.html">MAQUILLAJE</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/pages/productos.html">PRODUCTOS</a>
+                <a class="nav-link active" aria-current="page" href="/govi/pages/productos.html">PRODUCTOS</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
