--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
         <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid">
                 
-                    <img id="logo" class="header" src="/img/Logo.png" alt="logo" width="100px" > 
+                    <img id="logo" class="header" src="/govi/img/Logo.png" alt="logo" width="100px" > 
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/index.html">HOME</a>
+                        <a class="nav-link active" aria-current="page" href="/govi/index.html">HOME</a>
                       </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="/pages/cosmeticos.html">COSMETICOS</a>
+                    <a class="nav-link active" href="/govi/pages/cosmeticos.html">COSMETICOS</a>
                   </li>                  
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/pages/tutoriales.html">TUTORIALES</a>
+                    <a class="nav-link active" aria-current="page" href="/govi/pages/tutoriales.html">TUTORIALES</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/pages/maquillajes.html">MAQUILLAJE</a>
+                    <a class="nav-link active" aria-current="page" href="/govi/pages/maquillajes.html">MAQUILLAJE</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/pages/productos.html">PRODUCTOS</a>
+                    <a class="nav-link active" aria-current="page" href="/govi/pages/productos.html">PRODUCTOS</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -47,10 +47,10 @@
           <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/img/bannercarrusel1.png" class="d-block w-100"  alt="..." >
+                <img src="/govi/img/bannercarrusel1.png" class="d-block w-100"  alt="..." >
               </div>
               <div class="carousel-item">
-                <img src="/img/bannercarrusel2.png" class="d-block w-100" alt="..."  >
+                <img src="/govi/img/bannercarrusel2.png" class="d-block w-100" alt="..."  >
               </div>
               
             </div>
@@ -65,7 +65,7 @@
           </div>
           <section>
           <div class="ojos">    
-            <img class="imagencentro" src="/img/vero.png" alt="">
+            <img class="imagencentro" src="/govi/img/vero.png" alt="">
             <p>Soy Verónica Govi, una creadora de contenido y bloguera de belleza de Argentina. A mis 27 años, mi pasión es la belleza y comparto mis conocimientos a través de mi blog. Me enfoco en resaltar la belleza natural de las personas y promover el cuidado de la piel. Comparto consejos, tutoriales y reseñas de productos confiables y honestos. Mi objetivo es inspirar a mi audiencia a sentirse segura y hermosa en su propia piel. Agradezco el apoyo de todos y espero seguir compartiendo mi amor por la belleza y ayudar a otros a descubrir su potencial. ¡Juntos podemos brillar con confianza en nuestro propio estilo de belleza!</p>
            </div>
           </section>
@@ -73,7 +73,7 @@
 <main>
     <div class="card-group">
         <div class="card">
-          <img src="/img/maquillajess.png" class="card-img-top" alt="...">
+          <img src="/govi/img/maquillajess.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Tips de compras</h5>
             <p class="card-text">"Las mejores cremas y maquillajes que podes conseguir en el mercado".</p>
@@ -81,7 +81,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="/img/cremas.png" class="card-img-top" alt="...">
+          <img src="/govi/img/cremas.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Los si y los no</h5>
             <p class="card-text">"Cosmeticos que vuelan en las farmacias".</p>
@@ -89,7 +89,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="/img/nails.png" class="card-img-top" alt="...">
+          <img src="/govi/img/nails.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Los si y los no</h5>
             <p class="card-text">Diseños tendendias de uñas acrilicas y semipermanentes".</p>
