--- a/pages/maquillajes.html
+++ b/pages/maquillajes.html
@@ -14,26 +14,26 @@
         <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid">
                 
-                    <img id="logo" class="header" src="/img/Logo.png" alt="logo" width="100px" > 
+                    <img id="logo" class="header" src="/govi/img/Logo.png" alt="logo" width="100px" > 
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/index.html">HOME</a>
+                        <a class="nav-link active" aria-current="page" href="/govi/index.html">HOME</a>
                       </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="/pages/cosmeticos.html">COSMETICOS</a>
+                    <a class="nav-link active" href="/govi/pages/cosmeticos.html">COSMETICOS</a>
                   </li>                  
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/pages/tutoriales.html">TUTORIALES</a>
+                    <a class="nav-link active" aria-current="page" href="/govi/pages/tutoriales.html">TUTORIALES</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/pages/maquillajes.html">MAQUILLAJE</a>
+                    <a class="nav-link active" aria-current="page" href="/govi/pages/maquillajes.html">MAQUILLAJE</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/pages/productos.html">PRODUCTOS</a>
+                    <a class="nav-link active" aria-current="page" href="/govi/pages/productos.html">PRODUCTOS</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -47,19 +47,19 @@
      <main>   
     <div class="image-container6">
     <div class="image-item6">
-      <img src="/img/rimeltamaño2.png" alt="Imagen 1">
+      <img src="/govi/img/rimeltamaño2.png" alt="Imagen 1">
       <div class="overlay">
         <p class="image-text6">El rimmel de Maybelline ofrece beneficios como pestañas más largas y voluminosas, curvatura y definición para los ojos, durabilidad a lo largo del día, resistencia al agua para evitar manchas, diversas opciones de fórmulas y colores para adaptarse a diferentes preferencias y necesidades.</p>
       </div>
     </div>
     <div class="image-item6">
-      <img src="/img/protectorsolartamaño.png" alt="Imagen 2">
+      <img src="/govi/img/protectorsolartamaño.png" alt="Imagen 2">
       <div class="overlay">
         <p class="image-text6">Utilizar una base con protector solar ofrece beneficios como la protección contra los rayos UV, prevención de manchas y decoloración, retraso del envejecimiento prematuro, hidratación y nutrición de la piel. También brinda conveniencia al combinar dos pasos de cuidado en uno</p>
       </div>
     </div>
     <div class="image-item6">
-      <img src="/img/niveatamaño.png" alt="Imagen 3">
+      <img src="/govi/img/niveatamaño.png" alt="Imagen 3">
       <div class="overlay">
         <p class="image-text6">El humectante labial brinda múltiples beneficios, como hidratar y nutrir los labios, protegerlos contra el clima, prevenir la sequedad y las grietas, mejorar su apariencia y ser fácil de usar. Su fórmula hidratante y humectante proporciona una hidratación profunda, evitando la sequedad y manteniendo los labios suaves.</p>
       </div>
