--- a/pages/productos.html
+++ b/pages/productos.html
@@ -14,26 +14,26 @@
             <nav class="navbar navbar-expand-lg ">
                 <div class="container-fluid">
                     
-                        <img id="logo" class="header" src="/img/Logo.png" alt="logo" width="100px" > 
+                        <img id="logo" class="header" src="/govi/img/Logo.png" alt="logo" width="100px" > 
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/index.html">HOME</a>
+                            <a class="nav-link active" aria-current="page" href="/govi/index.html">HOME</a>
                           </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="/pages/cosmeticos.html">COSMETICOS</a>
+                        <a class="nav-link active" href="/govi/pages/cosmeticos.html">COSMETICOS</a>
                       </li>                  
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/pages/tutoriales.html">TUTORIALES</a>
+                        <a class="nav-link active" aria-current="page" href="/govi/pages/tutoriales.html">TUTORIALES</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/pages/maquillajes.html">MAQUILLAJE</a>
+                        <a class="nav-link active" aria-current="page" href="/govi/pages/maquillajes.html">MAQUILLAJE</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/pages/productos.html">PRODUCTOS</a>
+                        <a class="nav-link active" aria-current="page" href="/govi/pages/productos.html">PRODUCTOS</a>
                       </li>
                     </ul>
                     <form class="d-flex" role="search">
@@ -53,15 +53,15 @@
         <h3>PRODUCTOS DESTACADOS:</h3>
       </div>
       <div class="image-grid8">
-        <a href="https://listado.mercadolibre.com.ar/belleza-cuidado-personal/maquillaje/cosmeticos_NoIndex_True#applied_filter_id%3Dcategory%26applied_filter_name%3DCategor%C3%ADas%26applied_filter_order%3D5%26applied_value_id%3DMLA1248%26applied_value_name%3DMaquillaje%26applied_value_order%3D9%26applied_value_results%3D1521%26is_custom%3Dfalse" target="_blank" class="image-link8"><img src="/img/maquillajess.png"  alt="Imagen 1" class="round-image"></a>
-        <a href="https://listado.mercadolibre.com.ar/belleza-cuidado-personal/cuidado-piel/cosmeticos_NoIndex_True#applied_filter_id%3Dcategory%26applied_filter_name%3DCategor%C3%ADas%26applied_filter_order%3D5%26applied_value_id%3DMLA1253%26applied_value_name%3DCuidado+de+la+Piel%26applied_value_order%3D3%26applied_value_results%3D3934%26is_custom%3Dfalse" target="_blank" class="image-link8"><img src="/img/cremas.png"  alt="Imagen 2" class="round-image"></a>
-        <a href="https://listado.mercadolibre.com.ar/belleza-cuidado-personal/cuidado-cabello/cosmeticos_NoIndex_True#applied_filter_id%3Dcategory%26applied_filter_name%3DCategor%C3%ADas%26applied_filter_order%3D5%26applied_value_id%3DMLA1263%26applied_value_name%3DCuidado+del+Cabello%26applied_value_order%3D4%26applied_value_results%3D940%26is_custom%3Dfalse" target="_blank" class="image-link8"><img src="/img/cabello.png" alt="Imagen 3" class="round-image"></a>
-        <a href="https://listado.mercadolibre.com.ar/belleza-cuidado-personal/perfumes-fragancias/cosmeticos_NoIndex_True#applied_filter_id%3Dcategory%26applied_filter_name%3DCategor%C3%ADas%26applied_filter_order%3D5%26applied_value_id%3DMLA454712%26applied_value_name%3DPerfumes+y+Fragancias%26applied_value_order%3D10%26applied_value_results%3D332%26is_custom%3Dfalse" target="_blank" class="image-link8"><img src="/img/perfumesyfragancias.png" alt="Imagen 4" class="round-image"></a>
-        <a href="https://listado.mercadolibre.com.ar/belleza-cuidado-personal/manicuria-pedicuria/cosmeticos_NoIndex_True#applied_filter_id%3Dcategory%26applied_filter_name%3DCategor%C3%ADas%26applied_filter_order%3D5%26applied_value_id%3DMLA29884%26applied_value_name%3DManicur%C3%ADa+y+Pedicur%C3%ADa%26applied_value_order%3D8%26applied_value_results%3D274%26is_custom%3Dfalse" target="_blank" class="image-link8"><img src="/img/manicuraypedicura.png" alt="Imagen 5" class="round-image" ></a>
-        <a href="https://listado.mercadolibre.com.ar/belleza-cuidado-personal/depilacion/cosmeticos_NoIndex_True#applied_filter_id%3Dcategory%26applied_filter_name%3DCategor%C3%ADas%26applied_filter_order%3D5%26applied_value_id%3DMLA43673%26applied_value_name%3DDepilaci%C3%B3n%26applied_value_order%3D5%26applied_value_results%3D220%26is_custom%3Dfalse" target="_blank" class="image-link8"><img src="/img/depilacion.png" alt="Imagen 6" class="round-image"></a>
+        <a href="https://listado.mercadolibre.com.ar/belleza-cuidado-personal/maquillaje/cosmeticos_NoIndex_True#applied_filter_id%3Dcategory%26applied_filter_name%3DCategor%C3%ADas%26applied_filter_order%3D5%26applied_value_id%3DMLA1248%26applied_value_name%3DMaquillaje%26applied_value_order%3D9%26applied_value_results%3D1521%26is_custom%3Dfalse" target="_blank" class="image-link8"><img src="/govi/img/maquillajess.png"  alt="Imagen 1" class="round-image"></a>
+        <a href="https://listado.mercadolibre.com.ar/belleza-cuidado-personal/cuidado-piel/cosmeticos_NoIndex_True#applied_filter_id%3Dcategory%26applied_filter_name%3DCategor%C3%ADas%26applied_filter_order%3D5%26applied_value_id%3DMLA1253%26applied_value_name%3DCuidado+de+la+Piel%26applied_value_order%3D3%26applied_value_results%3D3934%26is_custom%3Dfalse" target="_blank" class="image-link8"><img src="/govi/img/cremas.png"  alt="Imagen 2" class="round-image"></a>
+        <a href="https://listado.mercadolibre.com.ar/belleza-cuidado-personal/cuidado-cabello/cosmeticos_NoIndex_True#applied_filter_id%3Dcategory%26applied_filter_name%3DCategor%C3%ADas%26applied_filter_order%3D5%26applied_value_id%3DMLA1263%26applied_value_name%3DCuidado+del+Cabello%26applied_value_order%3D4%26applied_value_results%3D940%26is_custom%3Dfalse" target="_blank" class="image-link8"><img src="/govi/img/cabello.png" alt="Imagen 3" class="round-image"></a>
+        <a href="https://listado.mercadolibre.com.ar/belleza-cuidado-personal/perfumes-fragancias/cosmeticos_NoIndex_True#applied_filter_id%3Dcategory%26applied_filter_name%3DCategor%C3%ADas%26applied_filter_order%3D5%26applied_value_id%3DMLA454712%26applied_value_name%3DPerfumes+y+Fragancias%26applied_value_order%3D10%26applied_value_results%3D332%26is_custom%3Dfalse" target="_blank" class="image-link8"><img src="/govi/img/perfumesyfragancias.png" alt="Imagen 4" class="round-image"></a>
+        <a href="https://listado.mercadolibre.com.ar/belleza-cuidado-personal/manicuria-pedicuria/cosmeticos_NoIndex_True#applied_filter_id%3Dcategory%26applied_filter_name%3DCategor%C3%ADas%26applied_filter_order%3D5%26applied_value_id%3DMLA29884%26applied_value_name%3DManicur%C3%ADa+y+Pedicur%C3%ADa%26applied_value_order%3D8%26applied_value_results%3D274%26is_custom%3Dfalse" target="_blank" class="image-link8"><img src="/govi/img/manicuraypedicura.png" alt="Imagen 5" class="round-image" ></a>
+        <a href="https://listado.mercadolibre.com.ar/belleza-cuidado-personal/depilacion/cosmeticos_NoIndex_True#applied_filter_id%3Dcategory%26applied_filter_name%3DCategor%C3%ADas%26applied_filter_order%3D5%26applied_value_id%3DMLA43673%26applied_value_name%3DDepilaci%C3%B3n%26applied_value_order%3D5%26applied_value_results%3D220%26is_custom%3Dfalse" target="_blank" class="image-link8"><img src="/govi/img/depilacion.png" alt="Imagen 6" class="round-image"></a>
         <a href="https://listado.mercadolibre.com.ar/_Deal_belleza-ao-dermocosmetica#deal_print_id=8dfcce70-0744-11ee-9181-7581b124df34&c_id=special-withoutlabel&c_element_order=25&c_campaign=BELLEZA_DERMOCOSMETICA&c_uid=8dfcce70-0744-11ee-9181-7581b124df34"
-        target="_blank" class="image-link8"><img src="/img/dermocosmetica.png" alt="Imagen 7" class="round-image"></a>
-        <a href="https://listado.mercadolibre.com.ar/maybelline#D[A:maybelline]" target="_blank" class="image-link8"><img src="/img/rimeltamaño.png" alt="Imagen 8" class="round-image"></a>
+        target="_blank" class="image-link8"><img src="/govi/img/dermocosmetica.png" alt="Imagen 7" class="round-image"></a>
+        <a href="https://listado.mercadolibre.com.ar/maybelline#D[A:maybelline]" target="_blank" class="image-link8"><img src="/govi/img/rimeltamaño.png" alt="Imagen 8" class="round-image"></a>
       </div>
       <div class="background-animation">
         <p class="animated-text">
