--- a/pages/cosmeticos.html
+++ b/pages/cosmeticos.html
@@ -58,10 +58,10 @@
             <div id="carouselExample" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="/img/acidobanner.png" class="d-block w-100" alt="Imagen 1">
+                  <img src="/govi/img/acidobanner.png" class="d-block w-100" alt="Imagen 1">
                 </div>
                 <div class="carousel-item">
-                  <img src="/img/aguamicelarbanner.png" class="d-block w-100" alt="Imagen 2">
+                  <img src="/govi/img/aguamicelarbanner.png" class="d-block w-100" alt="Imagen 2">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -81,7 +81,7 @@
         <div class="container">
             <div class="image-container">
               
-              <img src="/img/nenacomprimida.png" alt="Imagen">
+              <img src="/govi/img/nenacomprimida.png" alt="Imagen">
             </div>
             <div class="text-container">
               <p class="zoom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum itaque repudiandae animi ex. Quisquam libero nobis aliquam soluta animi officiis quidem iusto ea sapiente odio magnam, maiores rem, dolorum unde.</p>
