--- a/pages/tutoriales.html
+++ b/pages/tutoriales.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="/govi/sass/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <meta name="description" content="Descubre los mejores consejos de belleza y tendencias de maquillaje en nuestro blog de belleza. Obtén tutoriales paso a paso, reseñas de productos y secretos de cuidado de la piel para realzar tu belleza natural.">
+    <meta name="keywords" content="belleza, maquillaje, cuidado de la piel, consejos de belleza, tendencias de belleza, tutoriales de maquillaje, reseñas de productos, belleza natural">
 </head>
 <body>
     <header> 
