--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
           <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/govi/img/bannercarrusel2comprimido.png" class="d-block w-100"  alt="..." >
+                <img src="/govi/img/bannercarrusel2comprimido.png" class="d-block w-100"  alt="banner2" >
               </div>
               <div class="carousel-item">
-                <img src="/govi/img/bannercarrusel1.png" class="d-block w-100" alt="..."  >
+                <img src="/govi/img/bannercarrusel1.png" class="d-block w-100" alt="banner1"  >
               </div>
               
             </div>
@@ -67,7 +67,7 @@
           </div>
           <section>
           <div class="ojos">    
-            <img class="imagencentro" src="/govi/img/vero.png" alt="">
+            <img class="imagencentro" src="/govi/img/vero.png" alt="imgcentro">
             <p>Soy Verónica Govi, una creadora de contenido y bloguera de belleza de Argentina. A mis 27 años, mi pasión es la belleza y comparto mis conocimientos a través de mi blog. Me enfoco en resaltar la belleza natural de las personas y promover el cuidado de la piel. Comparto consejos, tutoriales y reseñas de productos confiables y honestos. Mi objetivo es inspirar a mi audiencia a sentirse segura y hermosa en su propia piel. Agradezco el apoyo de todos y espero seguir compartiendo mi amor por la belleza y ayudar a otros a descubrir su potencial. ¡Juntos podemos brillar con confianza en nuestro propio estilo de belleza!</p>
            </div>
           </section>
@@ -75,7 +75,7 @@
 <main>
     <div class="card-group">
         <div class="card">
-          <img src="/govi/img/maquillajess.png" class="card-img-top" alt="...">
+          <img src="/govi/img/maquillajess.png" class="card-img-top" alt="imgmaquillaje">
           <div class="card-body">
             <h5 class="card-title">Tips de compras</h5>
             <p class="card-text">"Las mejores cremas y maquillajes que podes conseguir en el mercado".</p>
@@ -83,7 +83,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="/govi/img/cremas.png" class="card-img-top" alt="...">
+          <img src="/govi/img/cremas.png" class="card-img-top" alt="imgcremas">
           <div class="card-body">
             <h5 class="card-title">Los si y los no</h5>
             <p class="card-text">"Cosmeticos que vuelan en las farmacias".</p>
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="/govi/img/nails.png" class="card-img-top" alt="...">
+          <img src="/govi/img/nails.png" class="card-img-top" alt="imgnails">
           <div class="card-body">
             <h5 class="card-title">Los si y los no</h5>
             <p class="card-text">Diseños tendendias de uñas acrilicas y semipermanentes".</p>
