--- a/pages/cosmeticos.html
+++ b/pages/cosmeticos.html
@@ -86,7 +86,7 @@
               <img src="/govi/img/nenacomprimida.png" alt="Imagen">
             </div>
             <div class="text-container">
-              <p class="zoom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum itaque repudiandae animi ex. Quisquam libero nobis aliquam soluta animi officiis quidem iusto ea sapiente odio magnam, maiores rem, dolorum unde.</p>
+              <p class="zoom-text">Recuerda leer las etiquetas de los productos para identificar ingredientes a los que puedas ser alérgico o sensibles, y realiza pruebas de parche antes de aplicar nuevos productos en áreas amplias de la piel. Además, investiga y consulta opiniones de otros usuarios para obtener una idea más clara sobre la efectividad y seguridad de los productos específicos.</p>
             </div>
           </div>
       </section>
